Enable Lilliput (JEP 450: Compact Object Headers)